--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,56 @@
 services:
   stats-server:
+    build: stats-server/server
+    image: stats-server
+    container_name: stat-server
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:6541/stats-db
+      - SPRING_DATASOURCE_USERNAME=statistics
+      - SPRING_DATASOURCE_PASSWORD=statistics
 
   stats-db:
     image: postgres:16.1
+    container_name: ewm-stat-db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_PASSWORD=statistics
+      - POSTGRES_USER=statistics
+      - POSTGRES_DB=statistics
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
 
   ewm-service:
+    build: service
+    image: ewm-service
+    container_name: ewm-service
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:6555/ewm
+      - SPRING_DATASOURCE_USERNAME=ewm
+      - SPRING_DATASOURCE_PASSWORD=ewm
 
   ewm-db:
     image: postgres:16.1
+    container_name: postgres
+    ports:
+      - "6555:5432"
+    environment:
+      - POSTGRES_PASSWORD=ewm
+      - POSTGRES_USER=ewm
+      - POSTGRES_DB=ewm
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
