--- a/statistics/client/src/main/resources/application.properties
+++ b/statistics/client/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=9191
+#server.port=9191
 
-logging.level.org.springframework.web.client.RestTemplate=DEBUG
+#logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
-stats-server.url=http://localhost:9090
+#stats-server.url=http://localhost:9090
