--- a/main/pom.xml
+++ b/main/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>org.example</groupId>
-    <artifactId>ewm-service</artifactId>
+    <artifactId>main</artifactId>
 
     <dependencies>
         <dependency>
