--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	</modules>
 
 	<groupId>ru.practicum</groupId>
-	<artifactId>explore-with-me</artifactId>
+	<artifactId>java-explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
