--- a/stats-service/pom.xml
+++ b/stats-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>org.example</groupId>
-    <artifactId>statistics</artifactId>
+    <artifactId>stats-service</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>client</module>
