--- a/stats-service/server/src/main/resources/application.properties
+++ b/stats-service/server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.sql.init.mode=always
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6541/statistic
+spring.datasource.url=jdbc:postgresql://localhost:6541/statistics
 spring.datasource.username=statistics
 spring.datasource.password=statistics
 
