--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,29 +27,29 @@ services:
       interval: 5s
       retries: 10
 
-#  ewm-service:
-#    build: ewm-service/Dockerfile
-#    container_name: ewm-service-container
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - ewm-db
-#    environment:
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:6555/ewm
-#      - SPRING_DATASOURCE_USERNAME=ewm
-#      - SPRING_DATASOURCE_PASSWORD=ewm
+  ewm-service:
+    build: ewm-service/
+    container_name: ewm-service-container
+    ports:
+      - "8080:8080"
+    depends_on:
+      - ewm-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
+      - SPRING_DATASOURCE_USERNAME=ewm
+      - SPRING_DATASOURCE_PASSWORD=ewm
 
-#  ewm-db:
-#    image: postgres:16.1
-#    container_name: postgres
-#    ports:
-#      - "6555:5432"
-#    environment:
-#      - POSTGRES_PASSWORD=ewm
-#      - POSTGRES_USER=ewm
-#      - POSTGRES_DB=ewm
-#    healthcheck:
-#      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
-#      timeout: 5s
-#      interval: 5s
-#      retries: 10
+  ewm-db:
+    image: postgres:16.1
+    container_name: postgres
+    ports:
+      - "6555:5432"
+    environment:
+      - POSTGRES_PASSWORD=ewm
+      - POSTGRES_USER=ewm
+      - POSTGRES_DB=ewm
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
