--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,3 +1,24 @@
 server.port=8080
 
 stats-server.url=http://localhost:9090
+
+spring.mvc.format.date=yyyy-MM-dd HH:mm:ss
+ewm.app.name=ewm-main-service
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.sql.init.mode=always
+
+#---
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:6555/ewm
+spring.datasource.username=ewm
+spring.datasource.password=ewm
+
+#---
+spring.config.activate.on-profile=test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:ewm
+spring.datasource.username=ewm
+spring.datasource.password=ewm
